# frost

./: .gitignore  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  frost.toml  oxfmt.config.ts  package.json  skills-lock.json
crates/frost-core/: Cargo.toml
crates/frost-core/src/: lib.rs
crates/frost-core/src/config/: mod.rs  schema.rs
crates/frost-core/src/process/: listener.rs  manager.rs  mod.rs  pty.rs  types.rs
crates/frost-core/src/state/: mod.rs
crates/frost-core/src/theme/: builtin.rs  mod.rs  registry.rs  resolver.rs  store.rs  system.rs  types.rs
crates/frost-tui/: Cargo.toml
crates/frost-tui/src/: actions.rs  app.rs  command_bar.rs  input.rs  log_viewer.rs  main.rs  palette.rs  search.rs  selection.rs  sidebar.rs  state.rs  theme_adapter.rs  theme_dialog.rs
docs/: plan-terminal.md  plan.md  project.md
schemas/: config.json
src/: index.tsx
src/config/: define-config.ts  loader.ts  types.ts
src/process/: manager.ts  spawner.ts  types.ts
src/state/: store.ts  types.ts
src/tui/: App.tsx  Dashboard.tsx
src/tui/components/: AnsiText.tsx  CommandBar.tsx  CommandPalette.tsx  Error.tsx  LogViewer.tsx  SearchDialog.tsx  Sidebar.tsx  StatusIcon.tsx  ThemeDialog.tsx
src/tui/hooks/: useNavigation.ts  useProcessManager.ts
src/tui/lib/: ansi.ts
src/tui/theme/: builtin.ts  dialog-theme-list.tsx  index.ts  (+6 more)
tests/: placeholder.test.ts
tests/config/: loader.test.ts
tests/fixtures/: .frost.config.ts  frost.config.ts
tests/state/: store.test.ts
ts/: README.md  frost-example.json  tsconfig.json
ts/src/: index.tsx
(+30 files in other folders)
