[package]
name = "frost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
tracing = "0.1"
dirs = "6.0"
tokio = { version = "1.44", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
regex-lite = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.19"
